--- a/src/index.css
+++ b/src/index.css
@@ -5,19 +5,35 @@ Variables
 */
 
 :root {
+  /*  */
   /* dark shades of primary color*/
-  --clr-primary-1: hsl(22, 28%, 21%);
+  --clr-primary-1: hsl(209, 61%, 16%);
+  --clr-primary-2: hsl(211, 39%, 23%);
+  --clr-primary-3: hsl(209, 34%, 30%);
+  --clr-primary-4: hsl(209, 28%, 39%);
+  /* primary/main color */
+  --clr-primary-5: hsl(210, 22%, 49%);
+  /* lighter shades of primary color */
+  --clr-primary-6: hsl(210, 22%, 49%);
+  --clr-primary-7: hsl(209, 23%, 60%);
+  --clr-primary-8: hsl(211, 27%, 70%);
+  --clr-primary-9: hsl(210, 31%, 80%);
+  --clr-primary-10: hsl(210, 36%, 96%);
+  /*  */
+
+  /* dark shades of primary color*/
+  /* --clr-primary-1: hsl(22, 28%, 21%);
   --clr-primary-2: hsl(22, 28%, 29%);
   --clr-primary-3: hsl(22, 28%, 37%);
-  --clr-primary-4: hsl(22, 28%, 45%);
+  --clr-primary-4: hsl(22, 28%, 45%); */
   /* primary/main color */
-  --clr-primary-5: hsl(22, 31%, 52%);
+  /* --clr-primary-5: hsl(22, 31%, 52%); */
   /* lighter shades of primary color */
-  --clr-primary-6: hsl(22, 31%, 60%);
+  /* --clr-primary-6: hsl(22, 31%, 60%);
   --clr-primary-7: hsl(22, 31%, 67%);
   --clr-primary-8: hsl(20, 31%, 74%);
   --clr-primary-9: hsl(22, 31%, 81%);
-  --clr-primary-10: hsl(22, 31%, 88%);
+  --clr-primary-10: hsl(22, 31%, 88%); */
   /* darkest grey - used for headings */
   --clr-grey-1: hsl(209, 61%, 16%);
   --clr-grey-2: hsl(211, 39%, 23%);
@@ -58,8 +74,9 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Calibre,Helvetica Neue,Helvetica,Roboto,Arial,sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
   background: var(--clr-white);
   color: var(--clr-grey-1);
   line-height: 1.5;
